[gd_scene load_steps=4 format=3 uid="uid://7puf5246l5s6"]

[ext_resource type="Script" uid="uid://c3erdcxudatah" path="res://scripts/fire_ball.gd" id="1_62x8t"]
[ext_resource type="Texture2D" uid="uid://dbyjese64ghpq" path="res://assets/darkball.png" id="2_qddq2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4ghaj"]
radius = 16.0

[node name="DarkBall" type="Area2D" groups=["Effect"]]
script = ExtResource("1_62x8t")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 3
texture = ExtResource("2_qddq2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_4ghaj")

[node name="FireBallVanish" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="FireBallVanish" to="." method="_on_fire_ball_vanish_timeout"]
